 Bug 514624 - UTF8 to Unicode conversion of SSE2 optimization for x86_64 platform. r=vlad